<resources>
    <string name="app_name">PaiterCafe</string>
    <string name="bordaoInicial">Aroma de mogi</string>
    <string name="nameTitle">PAITER CAFÉ</string>
    <string name="Email">E-mail</string>
    <string name="Cadastrese">Cadastre-se</string>
    <string name="jaTenhoConta">Já tenho uma conta</string>
    <string name="prosseguir">Prosseguir</string>
    <string name="Senha">Password</string>
    <string name="cadastrar">Criar</string>
    <string name="naoTemConta">Não tenho conta</string>
    <string name="insta">\@paitercafe</string>
    <string name="Entrar">Entrar</string>
    <string name="EsqueciASenha">Esqueci a senha</string>
    <string name="Menu">Menu</string>
    <string name="carrinhho">Adicionar ao carrinho</string>
    <string name="quantidade">Digite a quantidade</string>
    <string name="confirmar">Confirmar</string>
    <string name="SobreText">"Desde 2023 trazendo a melhor experiencia do café para a cidade de Mogi das Cruzes, nossa meta é alcançar ponto a ponto desse brasil, para isso conquistamos cada paladar que nos de a oportunidade de nos apresentar, somos Paiter Café "</string>
    <string name="Sobre">Sobre</string>
    <string name="voltar">Voltar</string>
    <string name="placeholderEmailCadastro">Digite seu email</string>
    <string name="Login">Login</string>
</resources>