<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"

    >
    <!-- container login-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="150dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-133dp"
        tools:layout_editor_absoluteY="211dp"
        >

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bordaoInicial"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/nameTitle"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Sobre"
            android:textAlignment="center"

            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/SobreText"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            />

        <Button
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/voltar"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insta"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>