<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activeCadastro"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"



    >
    <!-- container login-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="150dp"
        >

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bordaoInicial"
            android:textAlignment="center"
            android:textSize="25sp"
            />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTitle"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            />





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Senha"
            android:textAlignment="center"
            android:layout_marginTop="50dp"

            />
        <EditText
            android:id="@+id/inputPasswordLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            >

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:text="@string/Entrar"
                />

            <TextView
                android:id="@+id/esqueciASenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EsqueciASenha"
                android:layout_marginLeft="110dp"

                />






        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insta"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="100dp"

            />




    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>