<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bordaoInicial"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTitle"
            android:layout_marginBottom="25dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="25dp"

            />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Login"
            />
        <Button
            android:id="@+id/mainbtnCadastro"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Cadastro"
            />
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Sobre"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insta"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>